Added content for NEXT overview, still need to fix alignment

--- a/index.html
+++ b/index.html
@@ -39,11 +39,25 @@
                             <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
                         </header>
                         <div>
-                        	<div class="image left is-own-column"><img src="images/oldyoung.jpg"/></div>
-                        	<div>
-                        		<h3>No Age/School Restrictions</h3>
-                        		<p class="no-wrap"> Compete even as a college student or post-academic!
-                        	</div>
+                            <div class="image left is-own-column"><img src="images/oldyoung.jpg"/></div>
+                            <div>
+                                <h3>No Age/School Restrictions</h3>
+                                <p class="no-wrap"> Compete even as a college student or post-academic!
+                            </div>
+                        </div>
+                        <div>
+                            <div class="image right is-own-column"><img src="images/calendar.png"/></div>
+                            <div>
+                                <h3>August Kickoff | November Competition</h3>
+                                <p class="no-wrap"> Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.
+                            </div>
+                        </div>
+                        <div>
+                            <div class="image left is-own-column"><img src="images/midwest.png"/></div>
+                            <div>
+                                <h3>Midwest Venue</h3>
+                                <p class="no-wrap"> Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.
+                            </div>
                         </div>
                     </div>
                     <a href="#two" class="goto-next scrolly">Next</a>
