Added all content, tweaked some styling

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="container">
                     <ul class="actions">
                         <li>
-                            <a href="#next_overview" class="button special scrolly">
-                                <div>What's</div>
-                                <div><img class="inline logo" src="images/NEXT_white_nobg_inline.png"/></div>
+                            <a href="#next_overview" class="button special scrolly flex">
+                                <div class="space-right">What's</div>
+                                <div class="image inline logo"><img src="images/NEXT_white_nobg_inline.png"/></div>
                                 <div>?</div>
                             </a>
                         </li>
@@ -36,75 +36,96 @@
                     <span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
                     <div class="content">
                         <header class="major">
-                            <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
+                            <h2><div class="image inline logo"><img src="images/NEXT_black_nobg_inline.png"/></div> Robotics Competition</h2>
                         </header>
                         <div>
-                            <div class="image left is-own-column"><img src="images/oldyoung.jpg"/></div>
-                            <div>
-                                <h3>No Age/School Restrictions</h3>
-                                <p class="no-wrap"> Compete even as a college student or post-academic!
-                            </div>
-                        </div>
-                        <div>
-                            <div class="image right is-own-column"><img src="images/calendar.png"/></div>
-                            <div>
-                                <h3>August Kickoff | November Competition</h3>
-                                <p class="no-wrap"> Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.
-                            </div>
-                        </div>
-                        <div>
-                            <div class="image left is-own-column"><img src="images/midwest.png"/></div>
-                            <div>
-                                <h3>Midwest Venue</h3>
-                                <p class="no-wrap"> Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.
-                            </div>
-                        </div>
+	                        <div class="row-layout">
+	                            <div class="image tight"><img src="images/oldyoung.jpg"/></div>
+	                            <div>
+	                                <h3 class="align-left">No Age/School Restrictions</h3>
+	                                <p class="align-left">Compete even as a college student or post-academic!</p>
+	                            </div>
+	                        </div>
+	                        <div class="row-layout">
+	                            <div>
+	                                <h3 class="align-right">August Kickoff | November Competition</h3>
+	                                <p class="align-right">Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
+	                            </div>
+	                            <div class="image tight"><img src="images/calendar.png"/></div>
+	                        </div>
+	                        <div class="row-layout">
+	                            <div class="image tight"><img src="images/midwest.png"/></div>
+	                            <div>
+	                                <h3 class="align-left">Midwest Venue</h3>
+	                                <p class="align-left">Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
+	                            </div>
+	                        </div>
+	                    </div>
                     </div>
-                    <a href="#two" class="goto-next scrolly">Next</a>
+                    <a href="#the_game" class="goto-next scrolly">Next</a>
                 </div>
             </section>
 
-        <!-- Two -->
-            <section id="two" class="main special">
+        <!-- The Game -->
+            <section id="the_game" class="main special">
                 <div class="container">
                     <span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
                     <div class="content">
                         <header class="major">
-                            <h2>Stuff I do</h2>
+                            <h2>The Game</h2>
                         </header>
-                        <p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
-                        <ul class="icons-grid">
-                            <li>
-                                <span class="icon major fa-camera-retro"></span>
-                                <h3>Magna Etiam</h3>
-                            </li>
-                            <li>
-                                <span class="icon major fa-pencil"></span>
-                                <h3>Lorem Ipsum</h3>
-                            </li>
-                            <li>
-                                <span class="icon major fa-code"></span>
-                                <h3>Nulla Tempus</h3>
-                            </li>
-                            <li>
-                                <span class="icon major fa-coffee"></span>
-                                <h3>Sed Feugiat</h3>
-                            </li>
-                        </ul>
+                        <div class="row-layout">
+                            <div class="column-layout">
+                                <div class="image tight"><img src="images/weight.png"/></div>
+                                <div>
+                                    <h3 class="align-center">60-lb Robots</h3>
+                                    <p class="align-left">The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
+                                </div>
+                            </div>
+                            <div class="column-layout">
+                                <div class="image tight"><img src="images/cpu.png"/></div>
+                                <div>
+                                    <h3 class="align-center">Custom Electronics</h3>
+                                    <p class="align-left">Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
+                                </div>
+                            </div>
+                            <div class="column-layout">
+                                <div class="image tight"><img src="images/robot2.jpg"/></div>
+                                <div>
+                                    <h3 class="align-center">Alliances</h3>
+                                    <p class="align-left">Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <a href="#three" class="goto-next scrolly">Next</a>
+                    <a href="#why_next" class="goto-next scrolly">Next</a>
                 </div>
             </section>
 
-        <!-- Three -->
-            <section id="three" class="main special">
+        <!-- Why NEXT? -->
+            <section id="why_next" class="main special">
                 <div class="container">
                     <span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
                     <div class="content">
                         <header class="major">
-                            <h2>One more thing</h2>
+                            <h2>Why <div class="image inline logo"><img src="images/NEXT_black_nobg_inline.png"/></div>?</h2>
                         </header>
-                        <p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+                        <div>
+                            <h3 class="align-left">"We are what we celebrate" - Dean Kamen</h3>
+                            <p class="align-left">Keep celebrating!  NEXT Robotics Competition adds a "pro" level beyond educational robotics programs, giving students visible role-model competitors to aspire to.</p>
+                        </div>
+                        <div>
+                            <h3 class="align-left">Build a World of Creators</h3>
+                            <p class="align-left">With the rapid emergence of automation, our world is desperately in need of a cultural shift towards creativity.  NEXT Robotics Competition is a sport that enables people to practice their creative skills, which will lead to a productive, sustainable society.</p>
+                        </div>
+                        <div>
+                            <h3 class="align-left">Hone Teamwork and Communication Skills</h3>
+                            <p class="align-left">Sports are commonly regarded as a valuable activity to build teamwork and communication skills.  NEXT Robotics Competition is a sport and provides the same benefits to those with interests outside of traditional sports.</p>
+                        </div>
+                        <div>
+                            <h3 class="align-left">Adults Like to Compete, Too!</h3>
+                            <p class="align-left">NEXT Robotics Competition provides an outlet for adult designers to put their own skills to the test outside of the educational robotics spectrum of K-12 robotics programs.  And because of the timing of the build seasons, NEXT competitors can still be adult mentors in many educational robotics programs.</p>
+                        </div>
                     </div>
                     <a href="#footer" class="goto-next scrolly">Next</a>
                 </div>
@@ -114,7 +135,9 @@
             <section id="footer">
                 <div class="container">
                     <header class="major">
-                        <h2>Get in touch</h2>
+                        <h2>Registration will open later this summer.</h2>
+                        <h2>Interested? Sign up to receive updates!</h2>
+                        <p>You may unsubscribe at any time</p>
                     </header>
                     <form method="post" action="#">
                         <div class="row uniform">
