Removed wrapper divs around imgs, fixed styling on NEXT Overview section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li>
                             <a href="#next_overview" class="button special scrolly flex">
                                 <div class="space-right">What's</div>
-                                <div class="image inline logo"><img src="images/NEXT_white_nobg_inline.png"/></div>
+                                <img class="inline logo" src="images/NEXT_white_nobg_inline.png"/>
                                 <div>?</div>
                             </a>
                         </li>
@@ -36,26 +36,26 @@
                     <span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
                     <div class="content">
                         <header class="major">
-                            <h2><div class="image inline logo"><img src="images/NEXT_black_nobg_inline.png"/></div> Robotics Competition</h2>
+                            <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
                         </header>
                         <div>
 	                        <div class="row-layout">
-	                            <div class="image tight"><img src="images/oldyoung.jpg"/></div>
-	                            <div>
+	                            <img class="next-overview-icon" src="images/oldyoung.jpg"/>
+	                            <div class="grow">
 	                                <h3 class="align-left">No Age/School Restrictions</h3>
 	                                <p class="align-left">Compete even as a college student or post-academic!</p>
 	                            </div>
 	                        </div>
 	                        <div class="row-layout">
-	                            <div>
+	                            <div class="grow">
 	                                <h3 class="align-right">August Kickoff | November Competition</h3>
 	                                <p class="align-right">Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
 	                            </div>
-	                            <div class="image tight"><img src="images/calendar.png"/></div>
+	                            <img class="next-overview-icon" src="images/calendar.png"/>
 	                        </div>
 	                        <div class="row-layout">
-	                            <div class="image tight"><img src="images/midwest.png"/></div>
-	                            <div>
+	                            <img class="next-overview-icon" src="images/midwest.png"/>
+	                            <div class="grow">
 	                                <h3 class="align-left">Midwest Venue</h3>
 	                                <p class="align-left">Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
 	                            </div>
@@ -76,21 +76,21 @@
                         </header>
                         <div class="row-layout">
                             <div class="column-layout">
-                                <div class="image tight"><img src="images/weight.png"/></div>
+                                <img class="tight" src="images/weight.png"/>
                                 <div>
                                     <h3 class="align-center">60-lb Robots</h3>
                                     <p class="align-left">The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
                                 </div>
                             </div>
                             <div class="column-layout">
-                                <div class="image tight"><img src="images/cpu.png"/></div>
+                                <img class="tight" src="images/cpu.png"/>
                                 <div>
                                     <h3 class="align-center">Custom Electronics</h3>
                                     <p class="align-left">Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
                                 </div>
                             </div>
                             <div class="column-layout">
-                                <div class="image tight"><img src="images/robot2.jpg"/></div>
+                                <img class="tight" src="images/robot2.jpg"/>
                                 <div>
                                     <h3 class="align-center">Alliances</h3>
                                     <p class="align-left">Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
@@ -108,7 +108,7 @@
                     <span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
                     <div class="content">
                         <header class="major">
-                            <h2>Why <div class="image inline logo"><img src="images/NEXT_black_nobg_inline.png"/></div>?</h2>
+                            <h2>Why <img class="inline logo" src="images/NEXT_black_nobg_inline.png"/>?</h2>
                         </header>
                         <div>
                             <h3 class="align-left">"We are what we celebrate" - Dean Kamen</h3>
