Changed The Game section to icon grid, still need to fix layout issues with floating

--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
                             <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
                         </header>
                         <div>
-	                        <div class="row-layout">
-	                            <img class="next-overview-icon" src="images/oldyoung.jpg"/>
-	                            <div class="grow">
-	                                <h3 class="align-left">No Age/School Restrictions</h3>
-	                                <p class="align-left">Compete even as a college student or post-academic!</p>
-	                            </div>
-	                        </div>
-	                        <div class="row-layout">
-	                            <div class="grow">
-	                                <h3 class="align-right">August Kickoff | November Competition</h3>
-	                                <p class="align-right">Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
-	                            </div>
-	                            <img class="next-overview-icon" src="images/calendar.png"/>
-	                        </div>
-	                        <div class="row-layout">
-	                            <img class="next-overview-icon" src="images/midwest.png"/>
-	                            <div class="grow">
-	                                <h3 class="align-left">Midwest Venue</h3>
-	                                <p class="align-left">Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
-	                            </div>
-	                        </div>
-	                    </div>
+                            <div class="row-layout">
+                                <img class="next-overview-icon left" src="images/oldyoung.jpg"/>
+                                <div class="grow">
+                                    <h3 class="align-left">No Age/School Restrictions</h3>
+                                    <p class="align-left">Compete even as a college student or post-academic!</p>
+                                </div>
+                            </div>
+                            <div class="row-layout">
+                                <div class="grow">
+                                    <h3 class="align-right">August Kickoff | November Competition</h3>
+                                    <p class="align-right">Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
+                                </div>
+                                <img class="next-overview-icon right" src="images/calendar.png"/>
+                            </div>
+                            <div class="row-layout">
+                                <img class="next-overview-icon left" src="images/midwest.png"/>
+                                <div class="grow">
+                                    <h3 class="align-left">Midwest Venue</h3>
+                                    <p class="align-left">Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <a href="#the_game" class="goto-next scrolly">Next</a>
                 </div>
@@ -74,29 +74,44 @@
                         <header class="major">
                             <h2>The Game</h2>
                         </header>
-                        <div class="row-layout">
-                            <div class="column-layout">
-                                <img class="tight" src="images/weight.png"/>
-                                <div>
-                                    <h3 class="align-center">60-lb Robots</h3>
-                                    <p class="align-left">The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
+                        <ul class="icons-grid">
+                            <li>
+                                <div class="column-layout">
+                                    <img class="the-game-icon" src="images/weight.png"/>
+                                    <div>
+                                        <h3 class="align-center">60-lb Robots</h3>
+                                        <p class="align-left">The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="column-layout">
-                                <img class="tight" src="images/cpu.png"/>
-                                <div>
-                                    <h3 class="align-center">Custom Electronics</h3>
-                                    <p class="align-left">Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
+                            </li>
+                            <li>
+                                <div class="column-layout">
+                                    <img class="the-game-icon" src="images/cpu.png"/>
+                                    <div>
+                                        <h3 class="align-center">Custom Electronics</h3>
+                                        <p class="align-left">Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="column-layout">
-                                <img class="tight" src="images/robot2.jpg"/>
-                                <div>
-                                    <h3 class="align-center">Alliances</h3>
-                                    <p class="align-left">Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
+                            </li>
+                            <li>
+                                <div class="column-layout">
+                                    <img class="the-game-icon" src="images/money.png"/>
+                                    <div>
+                                        <h3 class="align-center">Low Cost</h3>
+                                        <p class="align-left">By design, teams could compete with a budget as little as $500, which will be demonstrated by the sample chassis design. The majority of components are also reusable.</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
+                            </li>
+                            <li>
+                                <div class="column-layout">
+                                    <img class="the-game-icon" src="images/robot2.jpg"/>
+                                    <div>
+                                        <h3 class="align-center">Alliances</h3>
+                                        <p class="align-left">Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                     <a href="#why_next" class="goto-next scrolly">Next</a>
                 </div>
