Set backgrounds, cleaned out primary image, need to fix background for header/footer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <!-- Header -->
             <section id="header">
+                <img class="bg" src="images/competition2_edited.jpg"/>
                 <header class="major">
                     <h1>Be a Creator</h1>
                 </header>
@@ -33,7 +34,7 @@
         <!-- NEXT Overview -->
             <section id="next_overview" class="main special">
                 <div class="container">
-                    <span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+                    <img class="bg" src="images/pits.jpg"/>
                     <div class="content">
                         <header class="major">
                             <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
@@ -69,7 +70,7 @@
         <!-- The Game -->
             <section id="the_game" class="main special">
                 <div class="container">
-                    <span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+                    <img class="bg" src="images/competition.jpg"/>
                     <div class="content">
                         <header class="major">
                             <h2>The Game</h2>
@@ -120,7 +121,7 @@
         <!-- Why NEXT? -->
             <section id="why_next" class="main special">
                 <div class="container">
-                    <span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+                    <img class="bg" src="images/championship2.jpg"/>
                     <div class="content">
                         <header class="major">
                             <h2>Why <img class="inline logo" src="images/NEXT_black_nobg_inline.png"/>?</h2>
