Updated NEXT Overview section to render better on small screens

--- a/index.html
+++ b/index.html
@@ -39,29 +39,35 @@
                         <header class="major">
                             <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
                         </header>
-                        <div>
-                            <div class="row-layout">
-                                <img class="next-overview-icon left" src="images/oldyoung.jpg"/>
-                                <div class="grow">
-                                    <h3 class="align-left">No Age/School Restrictions</h3>
-                                    <p class="align-left">Compete even as a college student or post-academic!</p>
-                                </div>
-                            </div>
-                            <div class="row-layout">
-                                <div class="grow">
-                                    <h3 class="align-right">August Kickoff | November Competition</h3>
-                                    <p class="align-right">Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
-                                </div>
-                                <img class="next-overview-icon right" src="images/calendar.png"/>
-                            </div>
-                            <div class="row-layout">
-                                <img class="next-overview-icon left" src="images/midwest.png"/>
-                                <div class="grow">
-                                    <h3 class="align-left">Midwest Venue</h3>
-                                    <p class="align-left">Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
-                                </div>
-                            </div>
-                        </div>
+                        <ul class="icons-column">
+                        	<li>
+	                            <div class="img-on-left">
+	                                <img src="images/oldyoung.jpg"/>
+	                                <div>
+	                                    <h3>No Age/School Restrictions</h3>
+	                                    <p>Compete even as a college student or post-academic!</p>
+	                                </div>
+	                            </div>
+	                        </li>
+	                        <li>
+	                            <div class="img-on-right">
+	                                <img src="images/calendar.png"/>
+	                                <div>
+	                                    <h3>August Kickoff | November Competition</h3>
+	                                    <p>Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
+	                                </div>
+	                            </div>
+	                        </li>
+	                        <li>
+	                            <div class="img-on-left">
+	                                <img src="images/midwest.png"/>
+	                                <div>
+	                                    <h3>Midwest Venue</h3>
+	                                    <p>Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
+	                                </div>
+	                            </div>
+	                        </li>
+                        </ul>
                     </div>
                     <a href="#the_game" class="goto-next scrolly">Next</a>
                 </div>
