Fixed formatting for grid, updated borders to be darker for transparentized background on xsmall

--- a/index.html
+++ b/index.html
@@ -85,36 +85,36 @@
                             <li>
                                 <div class="column-layout">
                                     <img class="the-game-icon" src="images/weight.png"/>
-                                    <div>
-                                        <h3 class="align-center">60-lb Robots</h3>
-                                        <p class="align-left">The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
+                                    <div class="the-game-text">
+                                        <h3>60-lb Robots</h3>
+                                        <p>The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="column-layout">
                                     <img class="the-game-icon" src="images/cpu.png"/>
-                                    <div>
-                                        <h3 class="align-center">Custom Electronics</h3>
-                                        <p class="align-left">Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
+                                    <div class="the-game-text">
+                                        <h3>Custom Electronics</h3>
+                                        <p>Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="column-layout">
                                     <img class="the-game-icon" src="images/money.png"/>
-                                    <div>
-                                        <h3 class="align-center">Low Cost</h3>
-                                        <p class="align-left">By design, teams could compete with a budget as little as $500, which will be demonstrated by the sample chassis design. The majority of components are also reusable.</p>
+                                    <div class="the-game-text">
+                                        <h3>Low Cost</h3>
+                                        <p>By design, teams could compete with a budget as little as $500, which will be demonstrated by the sample chassis design. The majority of components are also reusable.</p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="column-layout">
                                     <img class="the-game-icon" src="images/robot2.jpg"/>
-                                    <div>
-                                        <h3 class="align-center">Alliances</h3>
-                                        <p class="align-left">Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
+                                    <div class="the-game-text">
+                                        <h3>Alliances</h3>
+                                        <p>Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
                                     </div>
                                 </div>
                             </li>
