Changed backgrounds to personal pictures, fixed background loading bug on header page, fixed background bug on mobile when scrolling between sections

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <!-- Header -->
             <section id="header">
-                <img class="bg" src="images/competition2_edited.jpg"/>
                 <header class="major">
                     <h1>Be a Creator</h1>
                 </header>
                 <div class="container">
+                    <img class="bg" src="images/championship1.jpg"/>
                     <ul class="actions">
                         <li>
                             <a href="#next_overview" class="button special scrolly flex">
@@ -34,7 +34,7 @@
         <!-- NEXT Overview -->
             <section id="next_overview" class="main special">
                 <div class="container">
-                    <img class="bg" src="images/pits.jpg"/>
+                    <img class="bg" src="images/pits1.jpg"/>
                     <div class="content">
                         <header class="major">
                             <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
@@ -166,6 +166,7 @@
         <!-- Footer -->
             <section id="footer">
                 <div class="container">
+                    <img class="bg" src="images/pits2.jpg"/>
                     <h2 class="space-below">Registration will open later this summer.</h2>
                     <h2>Interested? Sign up to receive updates!</h2>
                     <p>You may unsubscribe at any time</p>
