Fixed comment for 'The Competiton' section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </section>
 
-        <!-- NEXT Overview -->
+        <!-- The Competition -->
             <section id="the_competition" class="main special">
                 <div class="container">
                     <img class="bg" src="images/pits1.jpg"/>
